Fixed typo, started css-grid explanation

--- a/abschnitte/webprojekte/html_erklaerung/07-flexbox/erklärung.html
+++ b/abschnitte/webprojekte/html_erklaerung/07-flexbox/erklärung.html
@@ -70,8 +70,8 @@
 		<div class="explain">
 			<h1>Erklärung</h1>
 
-			<h2>Try it out:</h2>
-			<p>An der linken unteren Ecke kannst die Größe der obigen Demonstrationen verändern.</p>
+			<h2>Try it out</h2>
+			<p>An der linken unteren Ecke kannst du die Größe der obigen Demonstrationen verändern.</p>
 
 			<h2>Vorraussetzung</h2>
 			<p>Ein Elternelement wird mit css <em>display:flex</em> als flex-Container ausgezeichnet. Die unmittelbaren Kindelemente werden dadurch zu flex-items und können nun, mittels passenden CSS Attributen im Container oder im Item selber, manipuliert werden.</p>
