Finished grid explanation, tweaked various other explanations slightly

--- a/abschnitte/webprojekte/html_erklaerung/05-menüleiste/explain.html
+++ b/abschnitte/webprojekte/html_erklaerung/05-menüleiste/explain.html
@@ -23,6 +23,11 @@
 	<div class="explain">
 		<h1>Erklärung</h1>
 
+		<h2>Aufgabe</h2>
+		<p>
+			Wir wollen so eine coole Menüleiste wie die oben bauen. 
+		</p>
+
 		<h2>HTML</h2>
 		<p>
 			Im Bereich nav legen wir eine ungeordnete Liste an. Die Listenpunkte enthalten anchor-tags zu anderen Seiten. Eines der a-Elemente erhält die id="aktuelleSeite".<br>
