--- a/abschnitte/webprojekte/html_erklaerung/06-formulare/FormulareErklarung.html
+++ b/abschnitte/webprojekte/html_erklaerung/06-formulare/FormulareErklarung.html
@@ -2,18 +2,13 @@
 	<head>
 		<title>html-Formulare</title>
 		<style>
-			h1{
-				font-weight: normal;
-			}
-
 			h1#register{
-				font-size:
 				font-weight: normal;
 				background-color: #e74c3c;
 				border-left:solid  #e74c3c 6px;
 				border-radius:9px 9px 0px 0px;
 				padding:4px;
-				width: 30%;
+				width: 350px;
 				margin-bottom: 0;
 			}
 			form{
@@ -21,7 +16,7 @@
 				border-left:solid #e74c3c 6px;
 				border-radius:0px 0px 9px 9px;
 				padding:4px;
-				width: 30%;
+				width: 350px;
 			}
 
 			#username, #password{
@@ -68,7 +63,7 @@
 
 		<div class="explain">
 		<h1>Erkl&#228;rung</h1>
-		<p>Ziwschen zwei form-Tags mit den Attributen action="zielseite" und method="get oder post" (w&#228;ren wichtig, wenn wir die Daten weiterverarbeiten wollten) werden input-Elemente angelegt mit folgenden Attributen:
+		<p>Ziwschen zwei form-Tags mit den Attributen action="zielseite" und method="get oder post" (w&#228;ren wichtig, wenn wir die Daten serverseitig weiterverarbeiten wollten) werden input-Elemente angelegt mit folgenden Attributen:
 
 		<dl>
 			<dt>type</dt><dd>password, text, checkbox, radio, number</dd>
