--- a/abschnitte/webprojekte/html_erklaerung/index.html
+++ b/abschnitte/webprojekte/html_erklaerung/index.html
@@ -12,6 +12,7 @@
 			<li><a href="./05-menüleiste/explain.html">Menüleiste</a> </li>
 			<li><a href="./06-formulare/FormulareErklarung.html">Formulare</a> </li>
 			<li><a href="./07-flexbox/erklärung.html">Flexbox</a> </li>
+			<li><a href="./08-grid/erklärung.html">Grid</a></li>
 
 		</ul>
 	</body>
