Improved Haushaltsbuch, added link to it on homepage

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>Bennys Seite</title>
   </head>
   <body>
-  <h1>Hier kommt irgendwann eine ausführliche Webseite</h1>
-  <p>Bis dahin, könnt ihr ein paar verschiedene Sachen anschauen:</p>
+  <h1>Yes, this website is ugly</h1>
+  <p>Irgendwann werde ich mir 'ne hübsche Webseite erstellen. Bis dahin ist das hier nur eine Sammlung verschiedener Projekte von mir.</p>
   <ul>
 	<li><a href="abschnitte/webprojekte/buchungsspass/index.html">Buchungsspass</a></li>
 	<li><a href="ScrumWiki/index.html">ScrumWik</a></li>			 
+	<li><a href="abschnitte/andere_projekte/Haushaltsbuch.xlsm">Simples Haushaltsbuch in Excel mit effizientem Eingabeformular</a></li>			 
   </ul>
   <h2>Trash</h2>
   <ul>	  
