Added link to Telefonbuch, changed Telefonbuch to lang='de'

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <p>Irgendwann werde ich mir 'ne hübsche Webseite erstellen. Bis dahin ist das hier nur eine Sammlung verschiedener Projekte von mir.</p>
   <ul>
 	<li><a href="abschnitte/webprojekte/buchungsspass/index.html">Buchungsspass</a></li>
+	<li><a href="abschnitte/webprojekte/telefonbuch/index.html">Telefonbuch</a></li>
 	<li><a href="ScrumWiki/index.html">ScrumWik</a></li>			 
 	<li><a href="abschnitte/andere_projekte/Haushaltsbuch.xlsm">Simples Haushaltsbuch in Excel mit effizientem Eingabeformular</a></li>			 
   </ul>
