--- a/abschnitte/webprojekte/telefonbuch/index.html
+++ b/abschnitte/webprojekte/telefonbuch/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
 			cursor: pointer;
 		}
 	</style>
-	<script src="http://cdn.jsdelivr.net/g/filesaver.js"></script>
+	<script src="FileSaver.min.js"></script>
 	<script src="jquery-3.3.1.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
