Added link to realtimeInputInC explanation, restructured home page

--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
   <body>
   <h1>Yes, this website is ugly</h1>
   <p>Irgendwann werde ich mir 'ne hübsche Webseite erstellen. Bis dahin ist das hier nur eine Sammlung verschiedener Projekte von mir.</p>
+  <h2>Nützliche Anwendungen</h2>
   <ul>
-	<li><a href="abschnitte/webprojekte/buchungsspass/index.html">Buchungsspass</a></li>
-	<li><a href="abschnitte/webprojekte/telefonbuch/index.html">Telefonbuch</a></li>
-	<li><a href="ScrumWiki/index.html">ScrumWik</a></li>			 
-	<li><a href="abschnitte/andere_projekte/Haushaltsbuch.xlsm">Simples Haushaltsbuch in Excel mit effizientem Eingabeformular</a></li>			 
+    <li><a href="abschnitte/webprojekte/buchungsspass/index.html">Buchungsspass</a></li>
+    <li><a href="abschnitte/webprojekte/telefonbuch/index.html">Telefonbuch</a></li>
+    <li><a href="abschnitte/andere_projekte/Haushaltsbuch.xlsm">Simples Haushaltsbuch in Excel mit effizientem Eingabeformular</a></li>			 
+  </ul>
+  <h2>Informativ</h2>
+  <ul>
+    <li><a href="ScrumWiki/index.html">ScrumWik</a></li>			 
+    <li><a href="https://github.com/BenjaminBrandtner/realtimeInputInC/blob/master/erkl%C3%A4rung.md">Realtime-Input in C Erklärung</a></li>
   </ul>
   <h2>Trash</h2>
   <ul>	  
-	<li><a href="abschnitte/webprojekte/markierbare_kunst/index.html">Markierbare Kunst</a></li>
-	<li><a href="abschnitte/webprojekte/gandalf/index.html">Gandalf (Warnung! Popups!)</a></li>
-   </ul>
+    <li><a href="abschnitte/webprojekte/markierbare_kunst/index.html">Markierbare Kunst</a></li>
+    <li><a href="abschnitte/webprojekte/gandalf/index.html">Gandalf (Warnung! Popups!)</a></li>
+  </ul>
   </body>
 </html>
