Added one link and promise to redesign

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Bennys Seite</title>
   </head>
   <body>
-  <h1>Yes, this website is ugly</h1>
-  <p>Irgendwann werde ich mir 'ne hübsche Webseite erstellen. Bis dahin ist das hier nur eine Sammlung verschiedener Projekte von mir.</p>
+  <h1>This website is scheduled for a redesign real soon! Promise!</h1>
+  <p>Eine Sammlung verschiedener Projekte von mir.</p>
   <h2>Nützliche Anwendungen</h2>
   <ul>
     <li><a href="abschnitte/webprojekte/buchungsspass/index.html">Buchungsspass</a></li>
@@ -16,6 +16,7 @@
   <ul>
     <li><a href="ScrumWiki/index.html">ScrumWik</a></li>			 
     <li><a href="https://github.com/BenjaminBrandtner/realtimeInputInC/blob/master/erkl%C3%A4rung.md">Realtime-Input in C Erklärung</a></li>
+    <li><a href="https://github.com/BenjaminBrandtner/REPL-in-C">Repl in C mit Erklärung</a></li>
   </ul>
   <h2>Trash</h2>
   <ul>	  
