--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 			<div id="nameAndPic">
 				<h1>Benjamin Brandtner</h1>
 				<a href="javascript:initFlip('landing')"><img id="profilepic" src="images\berndSymbol.png" alt="Bernd Symbol"></a>
-				<p id="quote">Programmierer</p>
+				<p id="quote">
+					beliebt, beleibt, begabt, bärtig<br>
+					billig, blumig, baufällig, blöd<br>
+					besoffen bombastisch. buchstäblich bleich.
+				
+				</p>
 			</div>
 
 			<div id="middleseperator"></div>
@@ -44,28 +49,49 @@
 
 	<!-- Content for right hand side -->
 	<div id="landing" class="content">
-		<h2>Plenty of projects:</h2>
+		<h2>Hello World!</h2>
+		<p>
+			Diese Webseite ist wenig mehr als eine Sammlung verschiedener Projekte, die ich seit Beginn meiner Ausbildung erstellt habe.<br>
+			Wenn auch nicht alles immer die sinnvollsten Sachen sind, so kann man vielleicht trotzdem etwas aus ihnen lernen. Ich versuche immer, meinen Code so sauber wie möglich zu halten und gut zu dokumentieren.
+		</p>
+		<h3>Pick one:</h3>
 		<ul>
-			<li> <a href="javascript:initFlip('pizza')">Pizza</a> </li>
-			<li> <a href="javascript:initFlip('panties')">Panties</a> </li>
-			<li> <a href="javascript:initFlip('placeholder')">Placeholder Text</a> </li>
+			<li> <a href="javascript:initFlip('nutzlich')">Nützliches</a> </li>
+			<li> <a href="javascript:initFlip('informativ')">Informatives</a> </li>
+			<li> <a href="javascript:initFlip('trash')">Trash</a> </li>
 		 </ul>
 	</div>
 
-	<div id="panties" class="content">
-		<h2>Playful Panties</h2>
-		<img src="http://images.clipartpanda.com/underwear-clipart-toonvectors-237-140.jpg" alt="">
+	<div id="nutzlich" class="content">
+		<h2>Nützliche Anwendungen</h2>
+		<p>
+			Anwendungen, deren Zweck zumindest erkennbar ist. Sie sind evtl. unhandlich und besitzen nur wenige Features.
+		</p>
+  <ul>
+	<li><a href="abschnitte/webprojekte/buchungsspass/index.html">Buchungsspaß</a></li>
+	<li class="explanation">Erstelle Buchungssätze zu verschiedenen Geschäftsfällen im Einkauf und Verkauf</li>
+	<li><a href="abschnitte/webprojekte/telefonbuch/index.html">Telefonbuch</a></li>
+	<li class="explanation">Füge Nummern hinzu, lösche sie, speichere alle als JSON-Datei ab und lade diese wieder.</li>
+    <li><a href="abschnitte/andere_projekte/Haushaltsbuch.xlsm">Simples Haushaltsbuch in Excel mit effizientem Eingabeformular</a></li>			 
+  </ul>
 	</div>
 
-	<div id="pizza" class="content">
-		<h2>Powerful Pizza</h2>
-		<a href="https://www.dominos.de"><img src="https://cdn.jsdelivr.net/emojione/assets/3.1/png/128/1f355.png" alt=""></a>
+	<div id="informativ" class="content">
+		<h2>Informatives</h2>
+  <ul>
+	<li><a href="https://benjaminbrandtner.github.io/ScrumWiki/">ScrumWiki</a></li>
+	<li class="explanation">In Gruppenarbeit erstelltes Wikipedia zur agilen Entwicklungsmethode SCRUM</li>
+    <li><a href="https://github.com/BenjaminBrandtner/realtimeInputInC/blob/master/erkl%C3%A4rung.md">Methoden für Realtime-Input auf der Konsole in C</a></li>
+    <li><a href="https://github.com/BenjaminBrandtner/REPL-in-C">Read-Evaluate-Print-Loop in C mit Erklärung</a></li>
+  </ul>
 	</div>
 
-	<div id="placeholder" class="content">
-		<h2>Placeholder Text</h2>
-		<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae
-			est. Mauris placerat eleifend leo.</p>
+	<div id="trash" class="content">
+		<h2>Trash</h2>
+  <ul>	  
+    <li><a href="abschnitte/webprojekte/markierbare_kunst/index.html">Markierbare Kunst</a></li>
+    <li><a href="abschnitte/webprojekte/gandalf/index.html">Gandalf (Warnung! Popups!)</a></li>
+  </ul>
 	</div>
 
 	<!-- Content that is not accessible through the navigation arrows -->
