Added Über mich

--- a/index.html
+++ b/index.html
@@ -56,10 +56,25 @@
 		</p>
 		<h3>Pick one:</h3>
 		<ul>
+			<li> <a href="javascript:initFlip('ubermich')">Über mich</a> </li>
 			<li> <a href="javascript:initFlip('nutzlich')">Nützliches</a> </li>
 			<li> <a href="javascript:initFlip('informativ')">Informatives</a> </li>
 			<li> <a href="javascript:initFlip('trash')">Trash</a> </li>
 		 </ul>
+	</div>
+
+	<div id="ubermich" class="content">
+		<h2>Über mich</h2>
+		<p>
+			Ich bin angehender Fachinformatiker, dem, wie man erkennen kann, Programmierung mehr liegt als Webdesign.<br>
+			Auf folgenden Seiten kann man mich finden:
+		</p>
+
+		<a href="https://github.com/BenjaminBrandtner"><img src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Github" class="websitelogo"></a>
+		<a href="https://steamcommunity.com/id/hiandbye95/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/512px-Steam_icon_logo.svg.png" alt="Steam" class="websitelogo"></a>
+		<a href="https://www.youtube.com/channel/UC35ZxV8dz91YgXnhCU9s0Vw"><img src="https://vignette.wikia.nocookie.net/logopedia/images/6/61/Yt_icon_2017.svg" alt="Youtube" class="websitelogo"></a>
+		<a href="javascript:initFlip('kontakt')"><img src="https://openclipart.org/download/168601/letter.svg" alt="Email" class="websitelogo"></a>
+
 	</div>
 
 	<div id="nutzlich" class="content">
@@ -98,6 +113,11 @@
 	<div id="easteregg" class="hiddenContent">
 		<h2>Easter Egg!</h2>
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Easter-Eggs.jpg/320px-Easter-Eggs.jpg" alt="">
+	</div>
+
+	<div id="kontakt" class="hiddenContent">
+		<h2>Kontaktformular</h2>
+		<p>Kommt bald!</p>
 	</div>
 
 </body>
