Touched up HTML,CSS Explanations and added link to it in Informatives

--- a/abschnitte/webprojekte/html_erklaerung/06-formulare/FormulareErklarung.html
+++ b/abschnitte/webprojekte/html_erklaerung/06-formulare/FormulareErklarung.html
@@ -8,7 +8,7 @@
 				border-left:solid  #e74c3c 6px;
 				border-radius:9px 9px 0px 0px;
 				padding:4px;
-				width: 350px;
+				width: 370px;
 				margin-bottom: 0;
 			}
 			form{
@@ -16,7 +16,7 @@
 				border-left:solid #e74c3c 6px;
 				border-radius:0px 0px 9px 9px;
 				padding:4px;
-				width: 350px;
+				width: 370px;
 			}
 
 			#username, #password{
@@ -31,7 +31,7 @@
 		<h1>html-Formulare</h1>
 
 		 <h1 id="register">Please register below:</h1>
-		<form action="formulareErklarungZiel.html" method="post">
+		<form action="formulareErklarungZiel.html" method="GET">
 
 			<fieldset>
 				<legend>General information</legend>
@@ -100,6 +100,10 @@
 			<h2>Absenden</h2>
 			<p>Mit einem <i>button</i> Element mit dem Attribut type="submit" kann man das formular abschicken.</p>
 		</div>
+
+<footer>
+	<a href="../index.html">Zurück zur Übersicht</a>
+</footer>
 
 	</body>
 </html>
