--- a/abschnitte/webprojekte/html_erklaerung/07-flexbox/erklärung.html
+++ b/abschnitte/webprojekte/html_erklaerung/07-flexbox/erklärung.html
@@ -118,14 +118,16 @@
 
 			<fieldset class="references">
 				<legend>Referenzen</legend>
-
-				<ul>
-				<li><a href=https://www.youtube.com/watch?v=sewV3LsmoXI>Kurze gute Youtube Tutorialserie</a></li>
-					<li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Gute Kurzübersicht</a></li>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Mit Erklärung</a> </li>
-				</ul>
+			
+				<a href="https://www.youtube.com/watch?v=sewV3LsmoXI">Youtube | Kurze gute Tutorialserie</a><br>
+				<a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">css-tricks.com | Gute graphische Übersicht</a><br>
+				<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">MSDN | Grafiken mit Erklärung</a>
 			</fieldset>
 		</div>
+
+<footer>
+	<a href="../index.html">Zurück zur Übersicht</a>
+</footer>
 
 	</body>
 </html>
