--- a/abschnitte/webprojekte/html_erklaerung/07-flexbox/shrink.html
+++ b/abschnitte/webprojekte/html_erklaerung/07-flexbox/shrink.html
@@ -64,7 +64,7 @@
 			<div class="item" id="item4">4</div>
 			<div class="item" id="item5">5</div>
 			<div class="item" id="item6">6</div>
-			<div class="item" id="item7">7 - ich verstehe die flex-shrink Eigenschaft nicht... <br>und flex-grow auch nicht wirklich... <br>jedenfalls, unter all diesen leeren Elementen <br> breitet sich 5 doppelt so viel <br> und 6 vier mal so viel aus </div>
+			<div class="item" id="item7">7 - ich verstehe die flex-shrink Eigenschaft nicht... <br>und flex-grow auch nicht so ganz... <br>jedenfalls, unter all diesen leeren Elementen <br> breitet sich 5 anscheinend doppelt so viel <br> und 6 vier mal so viel aus </div>
 			<div class="item" id="item8">8</div>
 			<div class="item" id="item9">9</div>
 			<div class="item" id="item10">10</div>
