--- a/abschnitte/webprojekte/html_erklaerung/index.html
+++ b/abschnitte/webprojekte/html_erklaerung/index.html
@@ -3,11 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Html Erklärungen</title>
+		<link rel="stylesheet" href="styles/explain.css">
 	</head>
 	<body>
+		<div class="explain">
 		<h1>Erklärungen verschiedener HTML und CSS Techniken</h1>
 		<p>Von Benjamin Brandtner.</p>
-		<p>Neben den Erklärungen empfiehlt es sich zusätzlich den HTML Quellcode anzuschauen. Er ist meist gut und übersichtlich und beinhaltet wenn möglich alle relevanten Teile des Themas.</p>
+		<p>Hier werden ein paar der grundlegenden Themen die wir im ersten Jahr Scriptunterricht behandelt haben demonstriert und erklärt. Neben den Erklärungen empfiehlt es sich zusätzlich in den HTML und CSS Quellcode zu schauen. Er ist meist gut und übersichtlich und beinhaltet wenn möglich alle relevanten Teile des Themas.</p>
 		<ul>
 			<li><a href="./05-menüleiste/explain.html">Menüleiste</a> </li>
 			<li><a href="./06-formulare/FormulareErklarung.html">Formulare</a> </li>
@@ -15,5 +17,12 @@
 			<li><a href="./08-grid/erklärung.html">Grid</a></li>
 
 		</ul>
+
+		</div>
+
+<footer>
+	<a href="https://benjaminbrandtner.github.io/">Zurück zur Webseite</a>
+</footer>
+
 	</body>
 </html>
