--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 	<div id="informativ" class="content">
 		<h2>Informatives</h2>
   <ul>
+    <li><a href="abschnitte/webprojekte/html_erklaerung/index.html">Erklärung grundlegender HTML und CSS Techniken</a></li>
 	<li><a href="https://benjaminbrandtner.github.io/ScrumWiki/">ScrumWiki</a></li>
 	<li class="explanation">In Gruppenarbeit erstelltes Wikipedia zur agilen Entwicklungsmethode SCRUM</li>
     <li><a href="https://github.com/BenjaminBrandtner/realtimeInputInC/blob/master/erkl%C3%A4rung.md">Methoden für Realtime-Input auf der Konsole in C</a></li>
