--- a/abschnitte/webprojekte/html_erklaerung/06-formulare/formulareErklarungZiel.html
+++ b/abschnitte/webprojekte/html_erklaerung/06-formulare/formulareErklarungZiel.html
@@ -1,7 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Done!</title>
+</head>
 <body>
-
 <h1>Thank you for registering!</h1>
-
+	
 </body>
 </html>
