Further touch uos

--- a/abschnitte/webprojekte/html_erklaerung/05-menüleiste/explain.html
+++ b/abschnitte/webprojekte/html_erklaerung/05-menüleiste/explain.html
@@ -52,7 +52,7 @@ text-decoration: none;
 		<dl>
 			<dt>nav</dt><dd>Mit position:sticky und top:0px bleibt der Navigationsbereich auch beim Scrollen immer oben kleben.</dd>
 			<dt>ul</dt><dd>Stylen wir wie wir wollen. Mit Padding oben und unten können wir die Größe verändern.</dd>
-			<dt>li</dt><dd>Mit <code>position:inline;</code> bringen wir alle li in eine Zeile, und mit <code>list-style-type:none;</code> entfernen wir die Bullet-Points.</dd>
+			<dt>li</dt><dd>Mit <code>display:inline;</code> bringen wir alle li in eine Zeile, und mit <code>list-style-type:none;</code> entfernen wir die Bullet-Points.</dd>
 			<dt>a</dt>
 			<dd>
 				padding: 4px 8px 4px 8px; Sorgt für mehr Leerraum um den Text, wodurch der Link zu einem schönen Knopf wird.<br><br>
