Touched up Telefonbuch-Explanations and added links to them

--- a/abschnitte/webprojekte/telefonbuch/index.html
+++ b/abschnitte/webprojekte/telefonbuch/index.html
@@ -9,7 +9,6 @@
 			display: inline-block;
 			background-color: rgb(221, 221, 221);
 		}
-
 		input.textfeld {
 			position: absolute;
 			left: 10em;
@@ -175,7 +174,10 @@
 			<input type="button" id="laden" value="Telefonbuch laden">
 		</fieldset>
 
-	</form><hr>
+	</form>
+	
+	<hr>
 	<div id="telefonbuch"></div>
+	<p id="erklarungslinks">Erklärungen zum <a href="https://github.com/BenjaminBrandtner/BenjaminBrandtner.github.io/blob/master/abschnitte/webprojekte/telefonbuch/erkl%C3%A4rungDateienErstellen.md">Dateien erstellen</a> und <a href="https://github.com/BenjaminBrandtner/BenjaminBrandtner.github.io/blob/master/abschnitte/webprojekte/telefonbuch/erkl%C3%A4rungDateienEinlesen.md">Dateien einlesen</a> mit Javascript.</p>
 </body>
 </html>
