Changes in Design: nav-buttons, lists

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div id="nutzlich" class="content">
 		<h2>Nützliche Anwendungen</h2>
 		<p>
-			Anwendungen, deren Zweck zumindest erkennbar ist. Sie sind evtl. unhandlich und besitzen nur wenige Features.
+			Anwendungen, deren Zweck zumindest erkennbar ist. Sie sind evtl. unhandlich oder besitzen nur wenige Features.
 		</p>
   <ul>
 	<li><a href="abschnitte/webprojekte/buchungsspass/index.html">Buchungsspaß</a></li>
