Added hint about keyboard navigation, Removed height limit

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 			<li> <a href="javascript:initFlip('informativ')">Informatives</a> </li>
 			<li> <a href="javascript:initFlip('trash')">Trash</a> </li>
 		 </ul>
+		 <aside><p>Tipp: Man kann diese Seite auch mit Pfeiltasten und Enter navigieren.</p></aside>
 	</div>
 
 	<div id="ubermich" class="content">
